package ar.edu.utn.frba.dds.models.entities.enums;

public enum TipoEstado {
  PENDIENTE,
  ACEPTADA,
  RECHAZADA
}
