package ar.edu.utn.frba.dds.models.entities.enums;

public enum TipoFuente {
    DINAMICA,
    ESTATICA,
    PROXY_API,
    PROXY_METAMAPA,
}
