package ar.edu.utn.frba.dds.estadisticas.models.dto.input;

import lombok.Data;

@Data
public class LugarDTO {
  private String departamento;
  private String provincia;
  private String municipio;

}
